# podcast

./: .dockerignore  .env  .env.db  Cargo.toml  Dockerfile  docker-compose.yml
.sqlx/: query-16f7b504de7c7ab7d1315af39ab82c8cf3ae2127f11c6c98334bbe5a234e0684.json  query-2c4fb8f86bd862638d51e28f5cef6838a3ce3b29ced5ab2871c84b8dcbe91aca.json  query-2cc267960822c6c428fa049d790ecfe1f7a68f3bdfa5dd689adcc74c4d2fb203.json  query-4ed51f831500a2e7cb7f6d323e24216c2b7e1f77a7d0c7adbec82c3aad61807f.json  query-8789d0d2f02713decca3056122d2c2997108d3ecd82d72683f93538b2365345c.json  query-95bf928d547ca97fa97a5e4652f851702079ea842b226afcefe10ff0ab7747e3.json  query-a23fbfa75f94dda8f69085789d44a50cefb5a5e06cf519390105b670892387cd.json
migrations/: 20240909030912_podcast_init.sql  20240909062915_users_init.sql
nginx/: nginx.conf
src/: main.rs
